apps/shortliner/03-deployment-shortliner-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortliner-payment
  namespace: shortliner
  labels:
    app: shortliner-payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shortliner-payment
  template:
    metadata:
      labels:
        app: shortliner-payment
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: shortliner-payment
          image: ghcr.io/lukaszsiedlecki/shortliner-payment:sha-ca0e9f3
          ports:
            - containerPort: 8083
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 60
