apps/shortliner/03-deployment-shortliner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortliner
  namespace: shortliner
  labels:
    app: shortliner
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: shortliner
  template:
    metadata:
      labels:
        app: shortliner
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: shortliner
          image: ghcr.io/lukaszsiedlecki/shortliner:sha-f22d96e
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
