apps/shortliner/04-service-shortliner-payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortliner-payment-svc
  namespace: shortliner
spec:
  selector:
    app: shortliner-payment
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
