apps/shortliner/04-service-shortliner.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortliner-svc
  namespace: shortliner
spec:
  selector:
    app: shortliner
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
