apps/shortliner/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortliner
  namespace: shortliner
spec:
  ingressClassName: nginx
  rules:
    - host: shortliner.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shortliner-frontend-svc
                port:
                  number: 80
